--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,15 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Withonlyamap blog</title>
-    <link rel="stylesheet" href="{ static 'css/base.css' }">
+    {% tailwind_css %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
-<body>
-    <header>
-        <h1><a href="{% url 'home' %}">Django blog</a></h1>
+<body class="bg-gray-50 font-serif leading-normal tracking-normal">
+<div class="container mx-auto">
+    <header class="flex items-center justify-center h-screen">
+        <h1 class="text-5xl"><a href="{% url 'home' %}" class="text-blue-400">Django blog</a></h1>
     </header>
     <div>
         {% block content %}
         {% endblock content %}
     </div>
+</div>
 </body>
 </html>
