--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,25 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Withonlyamap blog</title>
     {% tailwind_css %}
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-</head>
-<body class="bg-gray-50 font-serif leading-normal tracking-normal">
-<div class="container mx-auto">
-    <header class="flex items-center justify-center h-screen">
-        <h1 class="text-5xl"><a href="{% url 'home' %}" class="text-blue-400">Django blog</a></h1>
-    </header>
-    <div>
-        {% block content %}
-        {% endblock content %}
-    </div>
-</div>
-</body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+  </head>
+  <body class="container mx-auto px-6 py-4">
+  
+      <header class="">  </header>
+      
+      <section class="">
+        <div class="flex">{% block content %} {% endblock content %}</div>
+      </section>
+  
+  </body>
 </html>
