--- a/templates/base.html
+++ b/templates/base.html
@@ -28,14 +28,12 @@
       </div>
     </section>
 
-    <footer class="bg-gray-200 text-center lg:text-left mt-3">
+    <footer class="text-center lg:text-left mt-3">
       <div
-        class="text-gray-700 text-center p-4"
-        style="background-color: rgba(0, 0, 0, 0.2)"
-      >
-        © 2021 Copyright:
-        <a class="text-gray-800" href="https://tailwind-elements.com/">
-          Tailwind Elements
+        class="text-gray-700 text-center p-4">
+        © 2022
+        <a class="text-gray-800" href="#">
+          jnutterdev
         </a>
       </div>
     </footer>
