--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 {% for post in post_list %}
     <div class="post-entry bg-slate-300 my-3 p-4">
 
-        <h2 class="text-xl font-bold font-mono hover:underline"><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
+        <h2 class="text-xl font-bold hover:underline"><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
         <p class="text-sm font-normal">{{ post.body }}</p>
 
     </div>
