--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <div class="post-entry bg-slate-300 my-3 p-4">
 
         <h2 class="text-xl font-bold hover:underline"><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
-        <p class="text-sm font-normal">{{ post.body }}</p>
+        <p class="text-sm font-normal">{{ post.body|truncatewords:20 }}</p>
 
     </div>
 {% endfor %}
