--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,7 +5,7 @@
     <div class="post-entry">
         <h2>{{ post.title }}</h2>
         <p>{{ post.created_on|date:'M d, Y' }}</p>
-        <p>{{ post.body }}</p>
+        <p>{% lorem 2 p %}</p>
     </div>
 
 
