Added about page, install django-htmx

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,11 @@
     <title>Withonlyamap blog</title>
     {% tailwind_css %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Joan&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+
+     <script src="{% static 'htmx.min.js' %}" defer></script>
   </head>
   <body class="container font-body mx-auto px-6 py-4">
   <nav class=""> 
