--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
+{% load static %}
 
-{% block content %}
+{% block about %}
+   
+<div id="color-demo" class="smooth" style="color:red"
+hx-get="/colors" hx-swap="outerHTML" hx-trigger="every 1s">
+Color swap demo
+</div>
 
 
-{% endblock content %}
+
+
+{% endblock about %}
