--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="text-center lg:text-left mt-12">
       <div
-        class="text-gray-700 text-center p-4">
+        class="text-emerald-900 text-center p-4">
         © 2022
-        <a class="text-gray-800" href="#">
+        <a class="text-emerald-900" href="#">
           jnutterdev
         </a>
       </div>
