Played around with some bg colors

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,7 @@
 
 {% block content %}
    
-    <h1>About</h1>
+    <h2 class="mb-3">About</h2>
+    <p class="">{% lorem 3 %}</p>
 
 {% endblock content %}
