--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,4 +1,4 @@
-<div class="w-full text-gray-200 bg-emerald-900">
+<div class="w-full text-gray-200 mb-6 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
     <div class="flex-1 flex justify-center  text-slate-300 p-6">
         <a href="{% url 'home' %}" class="text-lg no-underline text-grey-darkest hover:text-blue-dark mx-6 ">Home</a>
          <a href="{% url 'about' %}" class="text-lg no-underline text-grey-darkest hover:text-blue-dark mx-6">About</a>
