--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="grid grid-cols-1 md:grid-cols-2 md:gap-6">
 {% for post in post_list %}
-    <div class="post-entry bg-slate-300 my-3 p-4">
+    <div class="post-entry bg-slate-300 my-3 p-6 ">
 
-        <h2 class="text-xl font-bold hover:underline"><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
+        <h2 class="hover:underline"><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
         <p class="text-sm font-normal">{{ post.body|truncatewords:20 }}</p>
 
     </div>
 {% endfor %}
-    <div class="pagination">
+    <div class="pagination mt-6">
     <span class="step-links">
         {% if page_obj.has_previous %}
             <a href="?page=1">&laquo; first</a>
@@ -27,5 +28,5 @@
     </span>
     </div>
 
-
+</div>
 {% endblock content %}
