--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
       <div
         class="text-emerald-900 text-center p-4">
         © 2022
-        <a class="text-emerald-900" href="#">
+        <a class="text-emerald-900" href="mailto:&#106;&#111;&#104;&#110;&#064;&#119;&#105;&#116;&#104;&#111;&#110;&#108;&#121;&#097;&#109;&#097;&#112;&#046;&#099;&#111;&#109;">
           jnutterdev
         </a>
       </div>
