--- a/templates/partials/_post_detail.html
+++ b/templates/partials/_post_detail.html
@@ -2,10 +2,14 @@
 
 {% block content %}
 
-    <div class="post-entry">
-        <h2>{{ post.title }}</h2>
-        <p>{{ post.created_on|date:'M d, Y' }}</p>
-        <p>{% lorem 2 p %}</p>
+    <div>
+        <h2 class="mb-2">{{ post.title }}</h2>
+        <p class="mb-3">{{ post.created_on|date:'M d, Y' }}</p>
+        <div class="mb-6 bg-slate-100 my-3 p-6">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+            <p>Autem cupiditate asperiores aliquam aperiam maiores unde voluptas perferendis dolor consequatur, ab corrupti ex iste mollitia fugit excepturi magnam atque distinctio laudantium, magni magnam dolor rem provident libero officia inventore optio voluptates fuga iusto, ab similique repellat aliquam molestias vitae excepturi cupiditate incidunt possimus quam magni, rem saepe eos rerum quaerat itaque illo vel voluptatum modi accusamus? Hic blanditiis voluptates dignissimos aperiam doloribus quasi iusto dolores nisi accusantium illo, quos nisi consequuntur eum repellat inventore cupiditate adipisci numquam, nostrum provident veritatis ducimus aspernatur. Quaerat ea beatae dolor alias sunt harum libero animi? Quidem repellendus dignissimos quam deserunt provident debitis, soluta tenetur dolorem, minus distinctio nesciunt adipisci eaque nobis odio necessitatibus sunt sint, molestias ipsam corrupti quis et cupiditate eaque quasi?</p>
+    </div>
     </div>
 
 
