working on split layout, looking prettty good so far

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,9 @@
 
 {% block content %}
    
-    <h2 class="mb-3">About</h2>
-    <p class="">{% lorem 3 %}</p>
+    <div class="container mx-auto">
+        <h2 class="mb-3">About</h2>
+        <p class="">{% lorem 3 %}</p>
+    </div>
 
 {% endblock content %}
