--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,9 +1,15 @@
-<footer class="text-center lg:text-left mt-12">
-      <div
-        class="text-emerald-900 text-center p-4">
-        © 2022
-        <a class="text-emerald-900" href="mailto:&#106;&#111;&#104;&#110;&#064;&#119;&#105;&#116;&#104;&#111;&#110;&#108;&#121;&#097;&#109;&#097;&#112;&#046;&#099;&#111;&#109;">
+
+
+<footer class="text-gray-600 body-font">
+  <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
+    <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+      <span class="ml-3 text-xl">jnutterdev</span>
+    </a>
+    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4"> © 2022
+       <a class="text-emerald-900" href="mailto:&#106;&#111;&#104;&#110;&#064;&#119;&#105;&#116;&#104;&#111;&#110;&#108;&#121;&#097;&#109;&#097;&#112;&#046;&#099;&#111;&#109;">
           jnutterdev
         </a>
-      </div>
-    </footer>
+    </p>
+
+  </div>
+</footer>
