--- a/templates/partials/_post_detail.html
+++ b/templates/partials/_post_detail.html
@@ -11,7 +11,9 @@
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">{{ post.title }}</h1>
       <p class="mb-8 leading-relaxed">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div class="flex justify-center">
-        <p class="mb-3">{{ post.created_on|date:'M d, Y' }}</p>
+        <p class="mb-6">{{ post.created_on|date:'M d, Y' }}</p>
+         <a href="{% url 'home' %}" class="text-gray-800 dark:text-gray-200 mx-1.5 sm:mx-6">
+         back</a>
       </div>
     </div>
   </div>
